2001-10-24  Michael Meeks  <michael@ximian.com>

	* Upd. all factories from _OAF_FACTORY to _ACTIVATION_FACTORY.
	
	* tests/test-ui.c (main): add a friendly warning so people know
	it hasn't crashed.

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build):
	honour get_menus_have_icons.
	
2001-10-24  Michael Meeks  <michael@ximian.com>

	* configure.in: add gconf; yuck.

	* bonobo/bonobo-ui-preferences.[ch]: impl.

	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_build): 
	upd. prefs

	* bonobo/bonobo-selector-widget.c (bonobo_selector_widget_init): 
	upd. prefs.

	* bonobo/bonobo-window.c (construct_priv): upd. prefs.

	* bonobo/bonobo-ui-sync-toolbar.c (parse_look),
	(create_dockitem): upd. prefs.

	* bonobo/bonobo-ui-sync-menu.c (add_tearoff): upd prefs.

2001-10-23  Michael Meeks  <michael@ximian.com>

	* tests/test-moniker.c (display_as_stream): upd.
	(main): make async a global option.
	re-order to kill redundant prototypes. do a ui_init so
	we can use Gtk+.
	(display_control_async_cb): impl.
	(display_as_control): upd.

	* bonobo/bonobo-widget.c
	(bonobo_widget_construct_control_from_objref),
	(bonobo_widget_construct_control),
	(bonobo_widget_launch_component): add CORBA_Environments.
	(bonobo_widget_new_control_from_objref),
	(bonobo_widget_new_control): setup the CORBA_Environments.

	* bonobo/bonobo-widget.c
	(bonobo_widget_new_control_async): impl.
	(control_new_async_cb): impl.

2001-10-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-file-selector-util.c (run_file_slector): 
	remove window_set_icon - we just need the transient and we
	get the icon just fine.

2001-10-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control.c (bonobo_control_plug_destroy_event_cb): 
	call new method.
	(bonobo_control_plug_destroy_cb): ditto.
	(impl_Bonobo_Control_setWindowId): unset.
	(bonobo_control_finalize): upd.
	(bonobo_control_set_plug): impl.
	(bonobo_control_get_plug): impl.
	(bonobo_control_dispose): impl.