@@ -1,3 +1,11 @@
+2001-10-24  jacob berkman  <jacob@ximian.com>
+
+	* glade/glade-bonobo.c: move from libglade/glade/
+
+	* configure.in: add libglade checks
+
+	* Makefile.am: build glade/
+
 2001-10-24  Michael Meeks  <michael@ximian.com>
 
 	* Upd. all factories from _OAF_FACTORY to _ACTIVATION_FACTORY.
